--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   <div class="buttons">
     <button onclick="window.location.href='stars.html'">💫 Купити зірки</button>
     <button onclick="window.location.href='premium.html'">💎 Купити Premium</button>
+    <button onclick="spinRoulette()">🎰 Крутити рулетку</button>
     <button onclick="window.location.href='https://t.me/osstaap_21'">📞 Служба підтримки</button>
     <button onclick="window.location.href='https://t.me/vidgukustarsium'">📝 Відгуки</button>
   </div>
